delete uesless part